--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -18,5 +18,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           branch: storybook-community-pages
           folder: storybook-static # output folder from `npm run build-storybook`
