--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          branch: storybook-pages
+          branch: storybook-test
           folder: storybook-static # output folder from `npm run build-storybook`
